@@ -1,8 +1,9 @@
 package com.smartfixsamana.auth;
 
 import java.util.Arrays;
+import java.util.List;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import com.smartfixsamana.auth.filter.JwtAuthenticationFilter;
 import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -11,23 +12,21 @@ import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import com.smartfixsamana.auth.filter.JwtAuthenticationFilter;
-import com.smartfixsamana.auth.filter.JwtValidationFilter;
-
 @Configuration
 public class SecurityConfig {
 
-    @Autowired
-    private AuthenticationConfiguration authenticationConfiguration;
+    private final AuthenticationConfiguration authenticationConfiguration;
 
     @Bean
     AuthenticationManager authenticationManager() throws Exception {
@@ -37,6 +36,13 @@ public class SecurityConfig {
     @Bean
     PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
+    }
+
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter, AuthenticationConfiguration authenticationConfiguration) {
+        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+        this.authenticationConfiguration = authenticationConfiguration;
     }
 
     @Bean
@@ -78,14 +84,14 @@ public class SecurityConfig {
                                 .requestMatchers(HttpMethod.DELETE, "/parts/{id}").hasRole("ADMIN")
 
                                     //Usuarios
-                                .requestMatchers(HttpMethod.POST, "/users").permitAll()
-                                        
-                                .anyRequest().authenticated())
+                            .requestMatchers(HttpMethod.POST, "/userslogin").permitAll()
+                            .requestMatchers(HttpMethod.POST, "/auth/login").permitAll()
+
+                            .anyRequest().authenticated())
                 .cors(cors -> cors.configurationSource(configurationSource()))
-                .addFilter(new JwtAuthenticationFilter(authenticationManager()))
-                .addFilter(new JwtValidationFilter(authenticationManager()))
-                .csrf(config -> config.disable())
+                .csrf(AbstractHttpConfigurer::disable)
                 .sessionManagement(management -> management.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
                 .build();
 
     }
@@ -94,8 +100,8 @@ public class SecurityConfig {
     CorsConfigurationSource configurationSource() {
 
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(Arrays.asList("*"));
-        config.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
+        config.setAllowedOriginPatterns(List.of("*"));
+        config.setAllowedOrigins(List.of("http://localhost:4200"));
         config.setAllowedMethods(Arrays.asList("POST", "GET", "PUT", "DELETE"));
         config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
         config.setAllowCredentials(true);
@@ -109,7 +115,7 @@ public class SecurityConfig {
     @Bean
     FilterRegistrationBean<CorsFilter> corsFilter() {
 
-        FilterRegistrationBean<CorsFilter> corsBean = new FilterRegistrationBean<CorsFilter>(
+        FilterRegistrationBean<CorsFilter> corsBean = new FilterRegistrationBean<>(
                 new CorsFilter(this.configurationSource()));
         corsBean.setOrder(Ordered.HIGHEST_PRECEDENCE);
         return corsBean;
